# docs-mcp

./: pyproject.toml
.github/: README.md
.github/workflows/: publish-testpypi.yml
docs_mcp/: __init__.py
docs_mcp/web/: app.py
docs_mcp/web/templates/: index.html
